# random-boolean-network

./: .gitignore  CMakeLists.txt  README.md
networks/: basic.txt  network1.txt  test-correct.txt  test-incorrect.txt  test.txt
src/: main.cpp  network.cpp  network.h  networkEvaluators.h  node.h
